--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S4. API exercise 1</title>
+    <title>S4. API nivell 1 exercise 2</title>
+    <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-<h1> S4. API exercise 1</h1>
-<div id="result"></div>
-<button onclick ="displayJoke()">Següent acudit</button> 
+    <div id="main">
+        <div id="box">
+          <h3>Preparat per riure? &#129315; </h3><br><br><br>
+          <p id="result"></p><br><br>
+          <button onclick="displayJoke()">Seguënt Acudit</button>
+        </div>
+      </div>
 <script src="index.js"></script>  
 </body>
 </html>
