--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
           <h3>Preparat per riure? &#129315; </h3><br><br><br>
           <p id="result"></p><br><br>
           <button onclick="displayJoke()">Seguënt Acudit</button>
+          <div class="button">
+            <h3>Score:</h3><br>
+            <button onclick="scoreAdd(1)">Not liked &#128542;</button>
+            <button onclick="scoreAdd(2)">Like it &#128578;</button>
+            <button onclick="scoreAdd(3)">Laugh it &#129315;</button>
+          </div>
+          <div class="button-reset">
+            <button onclick="scoreReset()">Reset</button>
+          </div>
         </div>
       </div>
 <script src="index.js"></script>  
