--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S4. API nivell 1 exercise 2</title>
+    <title>S4. API nivell 2 exercise 1</title>
     <link rel="stylesheet" href="main.css" />
 </head>
 <body>
+
+    <div id="weather"></div>
     <div id="main">
         <div id="box">
           <h3>Preparat per riure? &#129315; </h3><br><br><br>
