--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S4. API nivell 2 exercise 1</title>
+    <title>S4. API nivell 2 exercise 5</title>
     <link rel="stylesheet" href="main.css" />
 </head>
 <body>
@@ -13,7 +13,7 @@
         <div id="box">
           <h3>Preparat per riure? &#129315; </h3><br><br><br>
           <p id="result"></p><br><br>
-          <button onclick="displayJoke()">Seguënt Acudit</button>
+          <button onclick="random()">Seguënt Acudit</button>
           <div class="button">
             <h3>Score:</h3><br>
             <button onclick="scoreAdd(1)">Not liked &#128542;</button>
